Fix a bug on small screens

--- a/interface/assets/styles/layout.css
+++ b/interface/assets/styles/layout.css
@@ -463,6 +463,11 @@ body {
     position: relative;
 }
 
+.layout--topbar-button {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
+}
+
 [data-signed-in="true"] .layout--topbar-button {
     display: none;
 }
